add dependency files

--- a/PaybackAssessment/Resources/Info.plist
+++ b/PaybackAssessment/Resources/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Base Domain</key>
+	<string>$(BASE_DOMAIN)</string>
+	<key>Base URL</key>
+	<string>$(BASE_URL)</string>
+	<key>iTunes URL</key>
+	<string>$(ITUNES_APP_URL)</string>
+	<key>OneSignal App ID</key>
+	<string>$(ONESIGNAL_APP_ID)</string>
+	<key>Privacy Policy URL</key>
+	<string>$(PRIVACY_POLICY_URL)</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -43,8 +53,6 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -52,8 +60,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
