update config files

--- a/PaybackAssessment/Resources/Configuration/Config-Development.xcconfig
+++ b/PaybackAssessment/Resources/Configuration/Config-Development.xcconfig
@@ -31,10 +31,10 @@ ENABLE_BITCODE = NO
 // ============
 // MARK: - URLs
 // ============
-BASE_DOMAIN = https:$(FORWARD_SLASH)/api.spacexdata.com
-BASE_URL = $(BASE_DOMAIN)/v4
+BASE_DOMAIN = https:$(FORWARD_SLASH)/firebasestorage.googleapis.com
+BASE_URL = $(BASE_DOMAIN)/v0
 PRIVACY_POLICY_URL = https:$(FORWARD_SLASH)/google.com
-//ITUNES_APP_URL = itms-apps:$(FORWARD_SLASH)/itunes.apple.com/app/1536315424
+//ITUNES_APP_URL = itms-apps:$(FORWARD_SLASH)/itunes.apple.com/app/1537315424
 
 
 // =========================
